--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       Framework to control HTTP server.
   </p></li>
   <li><p>
-      <a href="json.html">HttpCtrl.Json</a> - Json Library provide comprehensive interface to Robot Framework to work
+      <a href="json.html">HttpCtrl.Json</a> - Json Library provides comprehensive interface to Robot Framework to work
       with JSON structures that are actively used for Internet communication nowadays.
   </p></li>
   </ul>
