--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       <b>Bug Tracker:</b> <a href="https://github.com/annoviko/robotframework-httpctrl/issues">https://github.com/annoviko/robotframework-httpctrl/issues</a>
   </p>
 
+
   <h2>Library Content</h2>
   <ul>
   <li><p>
@@ -57,6 +58,16 @@
       with JSON structures that are actively used for Internet communication nowadays.
   </p></li>
   </ul>
+
+  
+  <h2>Installation</h2>
+  <p>
+      Installation from PyPi using pip3 tool:
+  </p>
+  <p style="font-family: 'Courier New'; background-color: #DCDCDC">
+      $ pip3 install robotframework-httpctrl
+  </p>
+
   </body>
 </html>
 
