[.] Update information about license.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <p>
       <b>HttpCtrl</b> is an open source library for <b>Robot Framework</b> that provides HTTP/HTTPS client and HTTP
       server services to make REST API testing easy. The library is written using Python 3 language. The library is
-      distributed under GNU General Public License 3.
+      distributed under The 3-Clause BSD License.
   </p>
   <p>
       The reason why the library was implemented is requirement to use client/server API simultaneously in tests, for
