[.] Update index page.

--- a/index.html
+++ b/index.html
@@ -46,16 +46,20 @@
   <h2>Library Content</h2>
   <ul>
   <li><p>
-      <a href="client.html">HttpCtrl.Client</a> - HTTP/HTTPS Client Library that provides comprehensive interface to
+      <a href="client.html">HttpCtrl.Client</a> - HTTP/HTTPS Client library that provides comprehensive interface to
       Robot Framework to control HTTP/HTTPS client.
   </p></li>
   <li><p>
-      <a href="server.html">HttpCtrl.Server</a> - HTTP Server Library that provides comprehensive interface to Robot
+      <a href="server.html">HttpCtrl.Server</a> - HTTP Server library that provides comprehensive interface to Robot
       Framework to control HTTP server.
   </p></li>
   <li><p>
-      <a href="json.html">HttpCtrl.Json</a> - Json Library provides comprehensive interface to Robot Framework to work
+      <a href="json.html">HttpCtrl.Json</a> - Json library provides comprehensive interface to Robot Framework to work
       with JSON structures that are actively used for Internet communication nowadays.
+  </p></li>
+  <li><p>
+      <a href="logging.html">HttpCtrl.Logging</a> - Logging library provide functionality to configure the logging system 
+      that is used by HttpCtrl library.
   </p></li>
   </ul>
 
